--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@types/chart.js": "^2.8.5",
     "angular-bootstrap-md": "^8.3.1",
+    "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
