--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@ng-select/ng-select": "^3.3.0",
     "@types/chart.js": "^2.8.5",
     "angular-bootstrap-md": "^8.3.1",
     "animate.css": "^3.7.2",
